manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-gen-deployment
  labels:
    app: qr-gen-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: qr-gen-app

  template:
    metadata:
      labels:
        app: qr-gen-app
    spec:
      containers:
        - name: qr-gen-app
          #this docker image url set after main.yml file processing completed.
          image: DOCKER_IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources: # Add resource requests and limits
            requests:
              cpu: "1000m"       # Minimum CPU request (0.3 cores)
            limits:
              cpu: "2000m"       # Maximum CPU limit (0.2 cores)
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
