manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qr-gen-service
  labels:
    app: qr-gen-app
spec:
  selector:
    app: qr-gen-app

  ports:
    - port: 8080
      targetPort: 8080

  type: NodePort   # Change LoadBalancer to NodePort
